# inbiot-data-api-mcp

./: .gitignore  LICENSE  README.md  conftest.py  inbiot-config.example.yaml  pyproject.toml  server.py
src/: __init__.py
src/api/: __init__.py  forecasting.py  inbiot.py  openweather.py
src/config/: __init__.py  loader.py  validator.py
src/models/: __init__.py  schemas.py
src/skills/analytics/: tools.py
src/skills/compliance/: __init__.py  tools.py
src/skills/monitoring/: tools.py
src/skills/weather/: __init__.py  tools.py
src/tools/: __init__.py
src/tools/analytics/: __init__.py  tools.py
src/tools/compliance/: tools.py
src/tools/forecasting/: __init__.py  tools.py
src/tools/monitoring/: __init__.py  tools.py
src/tools/scoring/: __init__.py  calculator.py  compliance.py  tools.py
src/tools/weather/: tools.py
src/utils/: __init__.py  aggregation.py  cache.py  dates.py  exporters.py  normalization.py  provenance.py  retry.py  validation.py
src/well/: __init__.py  compliance.py  features.py  thresholds.py
tests/: __init__.py  conftest.py  test_api_clients.py  test_cache.py  test_compliance.py  test_go_iaqs.py  test_skills_integration.py  test_tools.py
